changé le titre

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>Mon squelette HTML</title>
+    <title>Mon squelette HTML (changé)</title>
     <!-- On peut avoir d'autres méta-données ici -->
   </head>
   <body>
