--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Je rajoute le h1</h1>
+    <h2>Je rajoute le h2</h2>
     <!-- Ici, on placera tout le contenu à destination
     de l'utilisateur -->
   </body>
